product srevice and general fixes