@@ -59,7 +59,13 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.5.0</version>
                 <configuration>
-                    <mainClass>Main</mainClass>
+                    <executable>C:\Program Files\Java\jdk-25.0.3\bin\java</executable>
+                    <arguments>
+                        <argument>--enable-preview</argument>
+                        <argument>-cp</argument>
+                        <classpath/>
+                        <argument>Main</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
